centjes-gen/test_resources/balance/error/as-is/conversion-impossible-rate.cent
currency USD 0.01
currency CHF 0.05

2023-12-17
  | Convert USD to CHF
  * investments 100 USD @ 0.654 CHF
  * investments  65 CHF
